--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,8 +1,9 @@
 /* General */
-
-      *{
-    font-family: 'Roboto';
-  }
+  @import url(https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,300&display=swap);
+  
+  * {
+    font-family: 'Roboto', sans-serif;
+  } 
   
   body {
     min-height: 100vh;
